manifest/wf-webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    hypercloud: workflow-webhook
  name: hypercloud-workflow-webhook
  namespace: kubeflow
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      hypercloud: workflow-webhook
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        hypercloud: workflow-webhook
    spec:
      serviceAccountName: default
      containers:
      - env:
        - name: TZ
          value: Asia/Seoul
        image: atcham/test:v2.3.10
        imagePullPolicy: Always
        name: hypercloud-workflow-webhook
        ports:
        - containerPort: 8443
          name: webhook
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /run/secrets/tls
          name: hypercloud-workflow-webhook-certs
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: hypercloud-workflow-webhook-certs
        secret:
          defaultMode: 420
          secretName: hypercloud-workflow-webhook-certs
